--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,9 @@
 <form action="/data" method = "POST">
-    <p>Start Date <input type = "date" name = "StartDate" /></p>
-    <p>End Date <input type = "date" name = "EndDate" /></p>
-    <p><input type = "submit" value = "Submit" /></p>
+    <p>Past Duration of Stock Price</p><select name="past_duration" method="GET" action="/">
+        {% for item in past_duration %}
+            <option value="{{item}}" SELECTED>{{item}}</option>"
+        {% endfor %}
+    </select>
+    <p>30 days forecast of IBM stock price</p>
+    <p><input type = "submit" value = "Generate forecast" /></p>
 </form>
