--- a/templates/form.html
+++ b/templates/form.html
@@ -9,6 +9,6 @@
             <option value="{{item}}" SELECTED>{{item}}</option>"
         {% endfor %}
     </select>
-    <p>30 days forecast of IBM stock price</p>
+    <p>30 days forecast of stock price</p>
     <p><input type = "submit" value = "Generate forecast" /></p>
 </form>
